# RustIM

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
display_via_debug/: Cargo.toml
macros/src/: lib.rs
rust_im/: .env  Cargo.toml  README.md  docker-compose.yml
rust_im/bindings/: ChatOperation.ts  ConversationType.ts  GroupConversation.ts  ImMessage.ts  MessageRequest.ts  MessageType.ts  User.ts  UserInput.ts
rust_im/src/: main.rs
rust_im/src/api/: mod.rs  response.rs  router.rs
rust_im/src/api/controllers/: users_controller.rs
rust_im/src/api_server/controllers/: router.rs
rust_im/src/api_server/controllers/controllers/: connections_controller.rs  controller.rs  mod.rs  users_controller.rs
rust_im/src/bootstrap/: bootstrap.rs
rust_im/src/config/: config.rs
rust_im/src/io/: io.rs
rust_im/src/io/db/postgres/: postgres.rs
rust_im/src/models/user/: user.rs
rust_im/src/operation/: operation.rs
rust_im/src/operations/: mod.rs  operation.rs
rust_im/src/operations/messages/: mod.rs  send_message_operation.rs
rust_im/src/operations/users/: create_user_operation.rs  get_user_operation.rs  mod.rs  user_errors.rs
rust_im/src/repo/users_repo/: users_repo.rs
rust_im/src/repo/users_repo/db/: mod.rs  users_postgres_db.rs
rust_im/src/test_setups/: mod.rs  test_setup.rs  test_utils.rs
rust_im/src/utils/: utils.rs
rust_im/src/ws_server/: connection_manager.rs  conversation.rs  im_message.rs  messaging_service.rs  mod.rs
rust_im/src/ws_server/operations/: mod.rs  send_mesage_operation.rs
src/: main.rs
src/api/: response.rs  router.rs
src/api/controllers/: controller.rs  mod.rs  users_controller.rs  wip_controller.rs
src/bootstrap/: bootstrap.rs
src/config/: config.rs
src/io/: io.rs  mod.rs
src/io/db/postgres/: postgres.rs
src/models/: user.rs
src/models/user/: user.rs
src/operations/: operation.rs
src/operations/users/: create_user_operation.rs  mod.rs
src/repo/: mod.rs
src/repo/users_repo/: mod.rs  users_repo.rs
src/repo/users_repo/db/: mod.rs  users_postgres_db.rs
