[package]
name = "rust_im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["macros"]}
serde = {version = "1.0.203", features = ["derive"]}
tokio = {version = "1.38.0", features = ["full"]}
