[package]
name = "rust_im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["macros"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
lazy_static = "1.5.0"
serde = {version = "1.0.203", features = ["derive"]}
tokio = {version = "1.38.0", features = ["full"]}
uuid = {version = "1.9.1", features = ["v4", "v7", "serde"]}
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["std", "fmt", "json"]}
tower = "0.4.13"
async-trait = "0.1.81"
dotenv = "0.15.0"
