[package]
name = "rust_im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros" }
anyhow = "1.0.86"
axum = {version = "0.7.5", features = ["macros", "ws"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid" ] }
lazy_static = "1.5.0"
serde = {version = "1.0.203", features = ["derive"]} 
tokio = {version = "1.38.0", features = ["full"]}
uuid = {version = "1.9.1", features = ["v4", "v7", "serde"]}
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features=["std", "fmt", "json"]}
tower = "0.4.13"
async-trait = "0.1.81"
dotenv = "0.15.0"
thiserror = "1.0.63"
chrono = "0.4.38"
tracing-test = "0.2.5"
rand = "0.8.5"
dashmap = "6.1.0"
futures-util = "0.3.31"
http-serde-ext = "1.0.2"
